Final report submission

--- a/mybib.bib
+++ b/mybib.bib
@@ -498,3 +498,13 @@ volume = {1314},
 journal = {Journal of Physics: Conference Series},
 doi = {10.1088/1742-6596/1314/1/012191}
 }
+@mastersthesis{MRI,
+   author = {Karlsson, Simon and Welander, Per},
+   institution = {Linköping University, Department of Biomedical Engineering},
+   pages = {76},
+   school = {Linköping University, Department of Biomedical Engineering},
+   school = {Linköping University, Department of Biomedical Engineering},
+   title = {Generative Adversarial Networks for Image-to-Image Translation on Street View and MR Images},
+   keywords = {Deep learning, Image processing, Artificial intelligence, Neural networks, MRI, Generative adversarial networks, Data augmentation, Image-to-image translation, Street view, Biomedical engineering, Electrical engineering},
+      year = {2018}
+}
